--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,8 @@ jobs:
         env:
           PYENV_BIN: ${{ env.PYENV_ROOT }}/bin/pyenv
         run: |
-          eval "$($PYENV_BIN init --path)"
+          command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"
+          eval "$(pyenv init -)"
           echo $PYTHON_VERSION > .python-version
           $PYENV_BIN install $($PYENV_BIN local)
       - name: Zip
